<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <categoryItem
            android:id="@+id/fridge"
            android:icon="@drawable/fridge"
            android:title="@string/fridge"/>

    <categoryItem
            android:id="@+id/cart"
            android:icon="@drawable/cart"
            android:title="@string/cart"/>

    <categoryItem
            android:id="@+id/cook"
            android:icon="@drawable/cooker"
            android:title="@string/cook"/>

    <categoryItem
            android:id="@+id/favourite"
            android:icon="@drawable/heart"
            android:title="@string/favourite"/>

    <categoryItem
            android:id="@+id/user"
            android:icon="@drawable/user"
            android:title="@string/user"/>
</menu>